--- a/views/create.ejs
+++ b/views/create.ejs
@@ -12,12 +12,12 @@
 
     <form action="/create" method="post">
       <label for="filename">File Name:</label>
-      <input type="text" id="filename" name="filename" required />
+      <input type="text" id="filename" pattern="[a-zA-Z0-9_-]+" name="filename" required />
 
       <br />
 
       <label for="content">File Content:</label>
-      <textarea id="content" name="content" rows="4" required></textarea>
+      <textarea id="content" name="content" rows="4"></textarea>
 
       <br />
 
