--- a/public/styles/create.css
+++ b/public/styles/create.css
@@ -30,7 +30,7 @@ textarea {
 }
 
 button {
-    background-color: #4caf50;
+    background-color: #3498db;
     color: #fff;
     padding: 10px 15px;
     border: none;
@@ -39,5 +39,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #2980b9;
 }
