--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,59 +1,59 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
-    margin: 0;
-    padding: 0;
+  font-family: "Arial", sans-serif;
+  background-color: #f0f0f0;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    background-color: #3498db;
-    color: white;
-    text-align: center;
-    padding: 1em;
+  background-color: #3498db;
+  color: white;
+  text-align: center;
+  padding: 1em;
 }
 
 h1 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 li {
-    background-color: white;
-    margin: 0.5em 0;
-    padding: 1em;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  margin: 0.5em 0;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 a {
-    text-decoration: none;
-    color: #3498db;
+  text-decoration: none;
+  color: #3498db;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 button {
-    background-color: #3498db;
-    color: white;
-    padding: 0.5em 1em;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+  background-color: #3498db;
+  color: white;
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: #2980b9;
+  background-color: #2980b9;
 }
 
 .filename-input {
-    margin-right: 10px;
-    padding: 0.5em;
-    border: 1px solid #3498db;
-    border-radius: 3px;
+  margin-right: 10px;
+  padding: 0.5em;
+  border: 1px solid #3498db;
+  border-radius: 3px;
 }
