--- a/views/create.ejs
+++ b/views/create.ejs
@@ -12,7 +12,13 @@
 
     <form action="/create" method="post">
       <label for="filename">File Name:</label>
-      <input type="text" id="filename" pattern="[a-zA-Z0-9_-]+" name="filename" required />
+      <input
+        type="text"
+        id="filename"
+        pattern="[a-zA-Z0-9_-]+"
+        name="filename"
+        required
+      />
 
       <br />
 
