Download feature (bonus)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,12 @@
       <li>
         <a href="/details/<%= file %>"><%= file %></a>
         <a href="/update/<%= file %>"><button>Update</button></a>
+        <a href="/download/<%= file %>"><button>Download</button></a>
+
         <button onclick="deleteFile('<%= file %>')">Delete</button>
       </li>
       <% }); %>
-    </ul>
+    </ul> 
     <a href="/create"><button>Create New File</button></a>
   </body>
   <script src="/scripts.js"></script>
