--- a/views/create.ejs
+++ b/views/create.ejs
@@ -3,31 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Create File</title>
     <link rel="stylesheet" href="/styles/create.css" />
   </head>
   <body>
     <h1>Create File</h1>
-
     <form action="/create" method="post">
       <label for="filename">File Name:</label>
-      <input
-        type="text"
-        id="filename"
-        pattern="[a-zA-Z0-9_-]+"
-        name="filename"
-        required
-      />
-
+      <input type="text" id="filename" name="filename" required />
       <br />
-
       <label for="content">File Content:</label>
       <textarea id="content" name="content" rows="4"></textarea>
-
       <br />
-
       <button type="submit">Create File</button>
     </form>
   </body>
+  <script src="/scripts.js"></script>
+
 </html>
